--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
       "<rootDir>/node_modules/react-addons-test-utils",
       "<rootDir>/node_modules/fbjs",
       "<rootDir>/node_modules/core-js",
+      "<rootDir>/node_modules/redux",
       "<rootDir>/node_modules/graphql",
-      "<rootDir>/node_modules/isomorphic-fetch"
+      "<rootDir>/node_modules/isomorphic-fetch",
+      "<rootDir>/src/",
+      "<rootDir>/test/"
     ]
   },
   "repository": {
@@ -35,6 +38,7 @@
   "homepage": "https://github.com/leeching/react-gql#readme",
   "devDependencies": {
     "babel-cli": "^6.4.5",
+    "babel-plugin-transform-runtime": "^6.4.3",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
