--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a collection of helper functions to build a react app with redux and graphql",
   "main": "src/index.js",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "lint": "eslint src test"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "homepage": "https://github.com/leeching/react-gql#readme",
   "devDependencies": {
     "babel-cli": "^6.4.5",
+    "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.1",
     "babel-plugin-transform-runtime": "^6.4.3",
     "babel-preset-es2015": "^6.3.13",
