--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "webpack": "^1.12.12"
   },
   "dependencies": {
-    "graphql": "^0.4.14",
-    "isomorphic-fetch": "^2.2.1"
+    "graphql": "^0.4.14"
   }
 }
