--- a/example/package.json
+++ b/example/package.json
@@ -22,6 +22,7 @@
     "react": "^0.14.7",
     "redux": "^3.2.1",
     "redux-lego": "^0.2.0",
+    "redux-logger": "^2.5.0",
     "webpack": "^1.12.12"
   }
 }
