--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,7 @@
     "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
     "koa-send": "^3.1.0",
+    "lodash": "^4.2.1",
     "react": "^0.14.7",
     "redux": "^3.2.1",
     "redux-lego": "^0.2.0",
