--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "rm -rf lib && babel src --out-dir lib --presets es2015,stage-0",
     "test": "karma start",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "example:start": "node --use_strict --harmony_destructuring --harmony_default_parameters example/index",
+    "example:build": "webpack --config ./example/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,23 +29,32 @@
     "babel-cli": "^6.4.5",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.4.3",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "eslint": "^1.10.3",
+    "graphql": "^0.4.17",
+    "isomorphic-fetch": "^2.2.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.6",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
+    "koa": "^1.1.2",
+    "koa-graphql": "^0.4.4",
+    "koa-mount": "^1.3.0",
+    "koa-route": "^2.4.2",
+    "koa-send": "^3.1.0",
     "lodash": "^4.0.0",
     "react": "^0.14.6",
     "react-addons-test-utils": "^0.14.6",
     "react-dom": "^0.14.6",
     "redux": "^3.0.5",
-    "redux-lego": "^0.1.1",
+    "redux-lego": "^0.2.0",
+    "redux-logger": "^2.5.2",
     "webpack": "^1.12.12"
   },
   "dependencies": {
