--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
     "redux": "^3.3.1",
-    "redux-lego": "^0.3.0",
+    "redux-brick": "^0.1.0",
     "redux-logger": "^2.5.2",
     "webpack": "^1.12.13"
   },
